--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,9 @@
     "keywords": ["Laravel", "Elasticsearch"],
     "require": {
         "illuminate/support": "~5",
+        "nesbot/carbon": "~1.34",
         "ext-json": "*",
-        "nesbot/carbon": "~1.34"
+        "ext-curl": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "~7.0",
